--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "dev": "nodemon index.ts",
     "lint": "eslint --ignore-path .eslintignore \"src/**/*.ts\" --fix",
     "lint:check": "eslint --ignore-path .eslintignore \"src/**/*.ts\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "npx tsc --project ./"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "morgan": "^1.10.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
@@ -34,11 +39,12 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
+    "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
     "typescript": ">=4.4"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,html}": [
+    "*.{js,ts}": [
       "prettier-eslint --write"
     ]
   }
