--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "nodemon index.ts",
+    "dev": "nodemon",
     "lint": "eslint --ignore-path .eslintignore \"src/**/*.ts\" --fix",
     "lint:check": "eslint --ignore-path .eslintignore \"src/**/*.ts\"",
     "prepare": "husky install",
-    "build": "npx tsc --project ./"
+    "build": "NODE_ENV=production && esbuild index.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
@@ -29,6 +30,8 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "esbuild": "^0.17.18",
+    "esbuild-node-tsc": "^2.0.5",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -41,7 +44,7 @@
     "prettier-eslint": "^15.0.1",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
-    "typescript": ">=4.4"
+    "typescript": "^4.9.3"
   },
   "lint-staged": {
     "*.{js,ts}": [
