--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "nodemon",
+    "dev": "ts-node-dev -r tsconfig-paths/register --exit-child --respawn src/app.ts",
     "lint": "eslint --ignore-path .eslintignore \"src/**/*.ts\" --fix",
     "lint:check": "eslint --ignore-path .eslintignore \"src/**/*.ts\"",
     "prepare": "husky install",
-    "build": "NODE_ENV=production && esbuild index.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist",
-    "start": "node dist/index.js"
+    "build": "esbuild src/app.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist",
+    "start": "node dist/index.js",
+    "db:migrate:prod": "prisma migrate deploy",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "zod": "^3.21.4"
   },
@@ -26,6 +29,7 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
@@ -39,12 +43,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4"
   },
   "lint-staged": {
     "*.{js,ts}": [
