--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,35 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "es2020",
-    "allowJs": true,
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "sourceMap": true,
-    "outDir": ".dev",
-    "strict": true,
+    "target": "esnext",
+    "module": "NodeNext",
     "lib": [
-      "es2020"
+      "ESNext"
     ],
-    "baseUrl": ".",
+    "allowJs": true,
+    "noEmit": true,
+    "isolatedModules": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "verbatimModuleSyntax": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "moduleResolution": "Node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./",
+    "paths": {
+      "@app/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src/**/*",
     "index.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".dev",
+    "dist"
   ]
 }
