--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@types/lodash": "^4.14.194",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "http-errors": "^2.0.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
