--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "zod": "^3.21.4"
@@ -36,6 +37,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
