--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "lint": "eslint --ignore-path .eslintignore \"src/**/*.ts\" --fix",
     "lint:check": "eslint --ignore-path .eslintignore \"src/**/*.ts\"",
     "prepare": "husky install",
-    "build": "esbuild src/app.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist",
+    "build": "esbuild src/app.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist && cp -r node_modules/.prisma/client/* ./dist",
     "start": "node dist/index.js",
     "db:migrate:prod": "prisma migrate deploy",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "generate:secret": "ts-node --transpile-only -O '{\"module\": \"commonjs\"}' ./src/scripts/generate-rsa.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
     "@types/lodash": "^4.14.194",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -28,12 +29,13 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "remove": "^0.1.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
@@ -42,6 +44,7 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "aws-sdk": "^2.1381.0",
     "esbuild": "^0.17.18",
     "esbuild-node-tsc": "^2.0.5",
     "eslint": "^8.39.0",
@@ -51,6 +54,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.3.1",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "prisma": "^4.13.0",
