--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ NODE_ENV = development
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:example@localhost:3306/mydb"
+PRIVATE_KEY=
