--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "prepare": "husky install",
     "build": "esbuild src/app.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist && cp -r node_modules/.prisma/client/* ./dist",
     "start": "node dist/index.js",
-    "db:migrate:prod": "prisma migrate deploy",
+    "db:push": "prisma db push",
     "postinstall": "prisma generate",
     "generate:secret": "ts-node --transpile-only -O '{\"module\": \"commonjs\"}' ./src/scripts/generate-rsa.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
     "@types/lodash": "^4.14.194",
-    "bcryptjs": "^2.4.3",
+    "argon2": "^0.30.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
-    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
