feat: update readme

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --exit-child --respawn src/app.ts",
+    "dev": "ts-node-dev -r --exit-child --respawn src/app.ts",
     "lint": "eslint --ignore-path .eslintignore \"src/**/*.ts\" --fix",
     "lint:check": "eslint --ignore-path .eslintignore \"src/**/*.ts\"",
     "prepare": "husky install",
-    "build": "esbuild src/app.ts --platform=node --bundle --format=esm --splitting --minify --outdir=dist && cp -r node_modules/.prisma/client/* ./dist",
-    "start": "node dist/index.js",
+    "build": "etsc -p . --minify",
+    "start": "node dist/app.js",
     "db:push": "prisma db push",
     "postinstall": "prisma generate",
     "generate:secret": "ts-node --transpile-only -O '{\"module\": \"commonjs\"}' ./src/scripts/generate-rsa.ts"
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -43,7 +44,6 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "aws-sdk": "^2.1381.0",
     "esbuild": "^0.17.18",
     "esbuild-node-tsc": "^2.0.5",
     "eslint": "^8.39.0",
@@ -53,14 +53,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "mock-aws-s3": "^4.0.2",
-    "nock": "^13.3.1",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "lint-staged": {
