--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node-dev -r --exit-child --respawn src/app.ts",
+    "dev": "cross-env NODE_ENV=development nodemon",
     "lint": "eslint --ignore-path .eslintignore \"src/**/*.ts\" --fix",
     "lint:check": "eslint --ignore-path .eslintignore \"src/**/*.ts\"",
     "prepare": "husky install",
-    "build": "etsc -p . --minify",
-    "start": "node dist/app.js",
+    "build": "swc src -d dist --source-maps --copy-files",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/app.js",
     "db:push": "prisma db push",
     "postinstall": "prisma generate",
     "generate:secret": "ts-node --transpile-only -O '{\"module\": \"commonjs\"}' ./src/scripts/generate-rsa.ts"
@@ -36,6 +36,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.60",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/http-errors": "^2.0.1",
@@ -44,8 +46,7 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "esbuild": "^0.17.18",
-    "esbuild-node-tsc": "^2.0.5",
+    "cross-env": "^7.0.3",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -53,11 +54,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "lint-staged": {
